--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -20,8 +20,8 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
     <script type="text/javascript" src="js/headerController.js"></script>
+    <script type="text/javascript" src="js/looseTemplates.js"></script>
 
     <!-- Base Path -->
     <base href="/">
