--- a/webpages/index.html
+++ b/webpages/index.html
@@ -12,19 +12,20 @@
     <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Angular -->
-    <script type="text/JavaScript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/headerController.js"></script>
-    <script type="text/javascript" src="js/blogController.js"></script>
+    <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/javascript" src="/js/indexBlogApp.js"></script>
+    <script type="text/javascript" src="/js/headerController.js"></script>
+    <script type="text/javascript" src="/js/blogController.js"></script>
+    <script type="text/javascript" src="/js/looseTemplates.js"></script>
 
     <!-- Base Path -->
     <base href="/">
@@ -38,7 +39,7 @@
 
 </head>
 
-<body ng-app="LeaguePage">
+<body ng-app="BlogFrontPage">
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
@@ -47,16 +48,20 @@
     <div class="container" ng-controller="BlogController as blog">
 
         <!-- Padding -->
-        <div class="row"/>
-        <!-- Page Heading/Breadcrumbs -->
+        <div class=""
+        <!-- Image header -->
         <div class="row">
+            <img width="100%" ng-src="{{blog.logo}}"/>
+            Should probably get something thinner here
+        </div>
+        <!-- Page Heading/Breadcrumbs -->
+        <!-- <div class="row">
             <div class="col-lg-12">
-                <img width="25%" ng-src="{{blog.logo}}"/>
                 <h1 class="page-header">Blog Home One
                     <small>Subheading</small>
                 </h1>
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <div class="row">
@@ -64,67 +69,31 @@
             <!-- Blog Entries Column -->
             <div class="col-md-8">
 
-                <!-- First Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:00 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, veritatis, tempora, necessitatibus inventore nisi quam quia repellat ut tempore laborum possimus eum dicta id animi corrupti debitis ipsum officiis rerum.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
-
-                <hr>
-
-                <!-- Second Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam, quasi, fugiat, asperiores harum voluptatum tenetur a possimus nesciunt quod accusamus saepe tempora ipsam distinctio minima dolorum perferendis labore impedit voluptates!</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
-
-                <hr>
-
-                <!-- Third Blog Post -->
-                <h2>
-                    <a href="#">Blog Post Title</a>
-                </h2>
-                <p class="lead">
-                    by <a href="index.php">Start Bootstrap</a>
-                </p>
-                <p><i class="fa fa-clock-o"></i> Posted on August 28, 2013 at 10:45 PM</p>
-                <hr>
-                <a href="blog-post.html">
-                    <img class="img-responsive img-hover" src="http://placehold.it/900x300" alt="">
-                </a>
-                <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, voluptates, voluptas dolore ipsam cumque quam veniam accusantium laudantium adipisci architecto itaque dicta aperiam maiores provident id incidunt autem. Magni, ratione.</p>
-                <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
-
-                <hr>
+                <div ng-repeat="brief in blog.briefs">
+                    <h2>
+                        <a href="{{'/blogpost/' + brief.id}}"><!-- Blog Post Title -->{{brief.title}} </a>
+                    </h2>
+                    <p class="lead">
+                        by <a href="{{'/blogpost/' + brief.id}}"><!-- Author -->{{brief.author}} </a>
+                    </p>
+                    <p><i class="fa fa-clock-o"></i> <!-- Posted on August 28, 2013 at 10:00 PM --> Posted on {{brief.date | date:"MMMM d, yyyy at h:mm a"}} </p>
+                    <hr>
+                    <a href="{{'/blogpost/' + brief.id}}" ng-show="{{brief.imageSource != null && brief.imageSource != undefined}}">
+                        <img class="img-responsive img-hover" ng-src="{{brief.imageSource}}" alt="{{brief.imageAltText}}">
+                    </a>
+                    <hr>
+                    <p>{{brief.description}}</p>
+                    <a class="btn btn-primary" href="#">Read More <i class="fa fa-angle-right"></i></a>
+                    <hr>
+                </div>
 
                 <!-- Pager -->
                 <ul class="pager">
                     <li class="previous">
-                        <a href="#">&larr; Older</a>
+                        <a href="#" ng-click="blog.getSet(blog.upperMost - blog.viewLimit)">&larr; Older</a>
                     </li>
                     <li class="next">
-                        <a href="#">Newer &rarr;</a>
+                        <a href="#" ng-click="blog.getSet(blog.upperMost + blog.viewLimit)">Newer &rarr;</a>
                     </li>
                 </ul>
 
@@ -150,27 +119,16 @@
                     <h4>Blog Categories</h4>
                     <div class="row">
                         <div class="col-lg-6">
+                            <!-- List half of the obtained catagories -->
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
+                                <li ng-repeat="catagory in blog.catagories" ng-if="$index < (blog.catagories.length / 2)"><a href="#">{{catagory}}</a>
                                 </li>
                             </ul>
                         </div>
                         <!-- /.col-lg-6 -->
                         <div class="col-lg-6">
                             <ul class="list-unstyled">
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
-                                </li>
-                                <li><a href="#">Category Name</a>
+                                <li ng-repeat="catagory in blog.catagories" ng-if="$index >= (blog.catagories.length / 2)"><a href="#">{{catagory}}</a>
                                 </li>
                             </ul>
                         </div>
@@ -181,8 +139,14 @@
 
                 <!-- Side Widget Well -->
                 <div class="well">
-                    <h4>Side Widget Well</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore, perspiciatis adipisci accusamus laudantium odit aliquam repellat tempore quos aspernatur vero.</p>
+                    <h3>Sign up for tournaments!</h3>
+                    <p>Should find an image to announce this.</p>
+                </div>
+
+                <!-- Club Logos Well -->
+                <div class="well">
+                    <h3>Club logos here</h3>
+                    <p>Should find an image to accompany this.</p>
                 </div>
 
             </div>
@@ -193,22 +157,16 @@
         <hr>
 
         <!-- Footer -->
-        <footer>
-            <div class="row">
-                <div class="col-lg-12">
-                    <p>Copyright &copy; Your Website 2014</p>
-                </div>
-            </div>
-        </footer>
+        <footer-and-copyright></footer-and-copyright>
 
     </div>
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
