--- a/webpages/testing.html
+++ b/webpages/testing.html
@@ -12,18 +12,18 @@
     <title>Modern Business - Start Bootstrap Template</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="css/modern-business.css" rel="stylesheet">
+    <link href="/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Angular -->
-    <script type="text/JavaScript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/app.js"></script>
-    <script type="text/javascript" src="js/headerController.js"></script>
+    <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/javascript" src="/js/headerController.js"></script>
+    <script type="text/javascript" src="/js/looseTemplates.js"></script>
 
     <!-- Base Path -->
     <base href="/">
@@ -46,10 +46,14 @@
     <!-- /.container -->
 
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+
+    <!-- Footer -->
+    <footer-and-copyright></footer-and-copyright>
+
 
 </body>
 
