About page now uses controllers and stuff

--- a/webpages/about.html
+++ b/webpages/about.html
@@ -22,6 +22,7 @@
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/javascript" src="/js/aboutApp.js"></script>
     <script type="text/javascript" src="/js/headerController.js"></script>
     <script type="text/javascript" src="/js/looseTemplates.js"></script>
 
@@ -37,23 +38,34 @@
 
 </head>
 
-<body ng-app="LeaguePage">
+<body ng-app="AboutPage">
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
 
     <!-- Header Carousel -->
-    <header id="myCarousel" class="carousel slide">
+    <header id="myCarousel" class="carousel slide" ng-controller="CarouselController as carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" 
+                ng-repeat="slide in carousel.slides track by $index" 
+                ng-attr-data-slide-to="$index"
+                ng-class="carousel.getActive($index)">
+            </li>
+            <!-- <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
             <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li> -->
         </ol>
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
-            <div class="item active">
+            <div class="item" ng-repeat="slide in carousel.slides track by $index" ng-class="carousel.getActive($index)">
+                <div class="fill" ng-style="{'background-image':'url(' + slide.imageSrc + ')'}"></div>
+                <div class="carousel-caption">
+                    <h2>{{slide.imageCaption}}</h2>
+                </div>
+            </div>
+            <!-- <div class="item active">
                 <div class="fill" style="background-image:url('http://placehold.it/1900x1080&text=Slide One');"></div>
                 <div class="carousel-caption">
                     <h2>Caption 1</h2>
@@ -70,7 +82,7 @@
                 <div class="carousel-caption">
                     <h2>Caption 3</h2>
                 </div>
-            </div>
+            </div> -->
         </div>
 
         <!-- Controls -->
@@ -85,25 +97,26 @@
     <!-- Page Content -->
     <div class="container">
 
-        <!-- Marketing Icons Section -->
-        <div class="row">
+        <!-- Header Location Icons Section -->
+        <div class="row" ng-controller="DescriptionHandler as description">
             <div class="col-lg-12">
                 <h1 class="page-header">
-                    Welcome to Modern Business
+                    {{description.teamData.header}}
                 </h1>
             </div>
-            <div class="col-md-4">
+            <!-- class="col-md-12" -->
+            <div ng-repeat="block in description.teamData.blocks" ng-attr-class="{{'col-md-' + block.size}}">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h4><i class="fa fa-fw fa-check"></i> Bootstrap v3.2.0</h4>
+                        <h4>{{block.title}}</h4>
                     </div>
                     <div class="panel-body">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, optio corporis quae nulla aspernatur in alias at numquam rerum ea excepturi expedita tenetur assumenda voluptatibus eveniet incidunt dicta nostrum quod?</p>
-                        <a href="#" class="btn btn-default">Learn More</a>
+                        <p>{{block.content}}</p>
+                        <a ng-hide="{{block.linkText === null}}" ng-href="{{block.linkUrl}}" target="_self" class="btn btn-default">{{block.linkText}}</a>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <!-- <div class="col-md-4">
                 <div class="panel panel-default">
                     <div class="panel-heading">
                         <h4><i class="fa fa-fw fa-gift"></i> Free &amp; Open Source</h4>
@@ -124,50 +137,25 @@
                         <a href="#" class="btn btn-default">Learn More</a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         <!-- /.row -->
 
         <!-- Portfolio Section -->
-        <div class="row">
+        <div class="row" ng-controller='PortfolioHandler as portfolio'>
             <div class="col-lg-12">
-                <h2 class="page-header">Portfolio Heading</h2>
+                <h2 class="page-header">{{portfolio.header}}</h2>
             </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
-                </a>
-            </div>
-            <div class="col-md-4 col-sm-6">
-                <a href="portfolio-item.html">
-                    <img class="img-responsive img-portfolio img-hover" src="http://placehold.it/700x450" alt="">
+            <div class="col-md-4 col-sm-6" ng-repeat="icon in portfolio.iconData track by $index">
+                <a ng-href="{{icon.imageLink}}" target="_self">
+                    <img class="img-responsive img-portfolio img-hover" ng-src="{{icon.imageSrc}}" alt="">
                 </a>
             </div>
         </div>
         <!-- /.row -->
 
         <!-- Features Section -->
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-lg-12">
                 <h2 class="page-header">Modern Business Features</h2>
             </div>
@@ -187,13 +175,13 @@
             <div class="col-md-6">
                 <img class="img-responsive" src="http://placehold.it/700x450" alt="">
             </div>
-        </div>
+        </div> -->
         <!-- /.row -->
 
         <hr>
 
         <!-- Call to Action Section -->
-        <div class="well">
+        <!-- <div class="well">
             <div class="row">
                 <div class="col-md-8">
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias, expedita, saepe, vero rerum deleniti beatae veniam harum neque nemo praesentium cum alias asperiores commodi.</p>
@@ -202,7 +190,7 @@
                     <a class="btn btn-lg btn-default btn-block" href="#">Call to Action</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <hr>
 
