--- a/webpages/about.html
+++ b/webpages/about.html
@@ -142,7 +142,7 @@
         <!-- /.row -->
 
         <!-- Portfolio Section -->
-        <div class="row" ng-controller='PortfolioHandler as portfolio'>
+        <div class="row" ng-controller='PortfolioHandler as portfolio' ng-hide="{{portfolio.header == null}}">
             <div class="col-lg-12">
                 <h2 class="page-header">{{portfolio.header}}</h2>
             </div>
@@ -178,7 +178,7 @@
         </div> -->
         <!-- /.row -->
 
-        <hr>
+        <!-- <hr> -->
 
         <!-- Call to Action Section -->
         <!-- <div class="well">
