Added calendar code, added footer to calendar, header now uses blog

--- a/webpages/about.html
+++ b/webpages/about.html
@@ -38,7 +38,7 @@
 
 </head>
 
-<body ng-app="AboutPage">
+<body ng-app="AboutPage" ng-cloak>
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
