--- a/webpages/index.html
+++ b/webpages/index.html
@@ -39,7 +39,7 @@
 
 </head>
 
-<body ng-app="BlogFrontPage">
+<body ng-app="BlogFrontPage" ng-cloak>
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
