--- a/webpages/calendar.html
+++ b/webpages/calendar.html
@@ -19,9 +19,11 @@
     <link href="css/the-big-picture.css" rel="stylesheet">
 
     <!-- Angular -->
-    <script type="text/JavaScript" src="js/angular.min.js"></script>
-    <script type="text/javascript" src="js/headerController.js"></script>
-    <script type="text/javascript" src="js/looseTemplates.js"></script>
+    <script type="text/JavaScript" src="/js/angular.min.js"></script>
+    <script type="text/javascript" src="/js/calendarApp.js"></script>
+    <script type="text/javascript" src="/js/headerController.js"></script>
+    <script type="text/javascript" src="/js/looseTemplates.js"></script>
+
 
     <!-- Base Path -->
     <base href="/">
@@ -35,7 +37,7 @@
 
 </head>
 
-<body ng-app="LeaguePage">
+<body ng-app="CalendarApp">
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
@@ -44,19 +46,39 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 col-sm-12">
-                <h1>The Big Picture</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, iusto, unde, sunt incidunt id sapiente rerum soluta voluptate harum veniam fuga odit ea pariatur vel eaque sint sequi tenetur eligendi.</p>
+                <h1>Upcoming Events</h1>
+                <p>Seriously this calendar iframe is hideous maybe this could be a bannar</p>
             </div>
         </div>
+        <div attr-class="col-md-12">
+            <div class="panel panel-default">
+                <!-- <div class="panel-heading">
+                    <h3>Upcoming Events</h3>
+                </div> -->
+                <div class="panel-body">
+                    <iframe src="https://calendar.google.com/calendar/embed?src=acmbruins%40gmail.com&ctz=America/Los_Angeles" style="border: 0" width="100%" height="800px" frameborder="0" scrolling="no"></iframe>
+                </div>
+            </div>
+        </div>
+
+        <div class="row"> 
+            <div class="col-lg-12">
+                <hr>
+
+                <footer-and-copyright></footer-and-copyright>
+            </div>
+        </div>
+        
         <!-- /.row -->
     </div>
     <!-- /.container -->
 
+    
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
+    <script src="/js/jquery.js"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
 
 </body>
 
