--- a/webpages/navbar.html
+++ b/webpages/navbar.html
@@ -15,6 +15,9 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
+                <li ng-class="{ active: header.isActive('/contact')}">
+                    <a href="/contact.html" target="_self">Blog</a>
+                </li>
                 <li ng-class="{ active: header.isActive('/about')}">
                     <a href="/about.html" target="_self">About</a>
                 </li>
@@ -23,9 +26,6 @@
                 </li>
                 <li ng-class="{ active: header.isActive('/calendar')}">
                     <a href="/calendar.html" target="_self">Calendar</a>
-                </li>
-                <li ng-class="{ active: header.isActive('/contact')}">
-                    <a href="/contact.html" target="_self">Contact</a>
                 </li>
                 <!--
                 <li class="dropdown">
