--- a/webpages/htmltemplates/navbar.html
+++ b/webpages/htmltemplates/navbar.html
@@ -27,39 +27,54 @@
                 <li ng-class="{ active: header.isActive('/calendar')}">
                     <a href="/calendar.html" target="_self">Calendar</a>
                 </li>
-                <li class="dropdown">
+                <li class="dropdown" ng-hide="{{header.isLoggedIn()}}">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b>Login</b> <span class="caret"></span></a>
                     <ul id="login-dp" class="dropdown-menu">
                         <li>
                             <!-- <div class="well"> -->
                                 <!-- <div class="col-md-12"> -->
-                                    <div class="well">
-                                        <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
-                                            <div class="form-group">
-                                                <label class="sr-only" for="exampleInputEmail2">Email address</label>
-                                                    <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
-                                            </div>
-                                            <div class="form-group">
-                                                <label class="sr-only" for="exampleInputPassword2">Password</label>
-                                                <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
-                                                <div class="help-block text-right"><a href="">Forgot your password?</a></div>
-                                            </div>
-                                            <div class="form-group">
-                                                <button type="submit" class="btn btn-primary btn-block">Sign in</button>
-                                            </div>
-                                            <div class="checkbox">
-                                                <label>
-                                                    <input type="checkbox"> Keep me logged in
-                                                </label>
-                                            </div>
-                                        </form>
+                            <div class="well">
+                                <form class="form" role="form" method="post" action="login" accept-charset="UTF-8" id="login-nav">
+                                    <div class="form-group">
+                                        <label class="sr-only" for="exampleInputEmail2">Email address</label>
+                                            <input type="email" class="form-control" id="exampleInputEmail2" placeholder="Email address" required>
                                     </div>
-                                <!-- </div> -->
-                                <div class="bottom text-center">
-                                    New here? <a href="/register" target="_self"><b>Join Us!</b></a>
-                                </div>
+                                    <div class="form-group">
+                                        <label class="sr-only" for="exampleInputPassword2">Password</label>
+                                        <input type="password" class="form-control" id="exampleInputPassword2" placeholder="Password" required>
+                                        <div class="help-block text-right"><a href="">Forgot your password?</a></div>
+                                    </div>
+                                    <div class="form-group">
+                                        <button type="submit" class="btn btn-primary btn-block">Sign in</button>
+                                    </div>
+                                    <div class="checkbox">
+                                        <label>
+                                            <input type="checkbox"> Keep me logged in
+                                        </label>
+                                    </div>
+                                </form>
+                            </div>
+                            <!-- </div> -->
+                            <div class="bottom text-center">
+                                New here? <a href="/register" target="_self"><b>Join Us!</b></a>
+                            </div>
                             <!-- </div> -->
                         </li>
+                    </ul>
+                </li>
+                <li class="dropdown" ng-show="{{header.isLoggedIn()}}">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                        <b>Name here <span class="caret"></span></b>
+                    </a>
+                    <ul class="dropdown-menu">
+                        <li class="dropdown-header">Welcome, <b>Person!</b></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a></li>
+                        <li><a href="#"><i class="fa fa-trophy" aria-hidden="true"></i> Upcoming Tourmanents</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></i> Cart</a></li>
+                        <li role="separator" class="divider"></li>
+                        <li><a href="#"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Log Out</a></li>
                     </ul>
                 </li>
                 <!--
