--- a/webpages/register.html
+++ b/webpages/register.html
@@ -17,16 +17,16 @@
     <!-- Custom CSS -->
     <link href="/css/the-big-picture.css" rel="stylesheet">
     <link href="/css/padding.css" rel="stylesheet">
-    <!-- <link href="/css/modern-business.css" rel="stylesheet"> -->
+    <link href="/css/modern-business.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
     <!-- Angular -->
     <script type="text/JavaScript" src="/js/angular.min.js"></script>
-    <script type="text/javascript" src="/js/indexBlogApp.js"></script>
+    <script type="text/JavaScript" src="/js/angular-messages.js"></script>
+    <script type="text/javascript" src="/js/registerApp.js"></script>
     <script type="text/javascript" src="/js/headerController.js"></script>
-    <script type="text/javascript" src="/js/blogSidebar.js"></script>
     <script type="text/javascript" src="/js/looseTemplates.js"></script>
 
     <!-- Base Path -->
@@ -41,34 +41,49 @@
 
 </head>
 
-<body ng-app="BlogFrontPage" ng-cloak class="full" >
+<body ng-app="RegisterPage" ng-cloak class="full" >
 
     <!-- Navigation -->
     <navigation-bar></navigation-bar>
 
     <!-- Page Content -->
-    <div class="container">
+    <div class="container" ng-controller="RegisterController as register">
         <div class="col-lg-6 top200">
                 <h1 class="col-lg-12 well">Registration Form</h1>
                 <div class="col-lg-12 well">
-                    <form>    
+                    <form name="registrationForm">    
                         <!-- Username and Password Info -->
                         <div class="row">
                             <div class="col-sm-12 form-group">
                                 <label>Username</label>
-                                <input type="text" placeholder="Username" class="form-control">
+                                <div ng-messages="registrationForm.username.$error" style="color:maroon" role="alert" ng-hide="registrationForm.username.$pristine">
+                                    <div class="alert alert-danger" role="alert" ng-message="required">
+                                        <span class="glyphicon glyphicon-exclamation-sign" aria-hidden="true"></span>
+                                        <span class="sr-only">Error:</span>
+                                        A username is required.
+                                    </div>
+                                    <div ng-message="minlength">Your field is too short</div>
+                                    <div ng-message="maxlength">Your field is too long</div>
+                                </div>
+                                <input type="text" 
+                                    placeholder="Username" 
+                                    class="form-control"
+                                    ng-model="register.username" 
+                                    required
+                                    name="username"
+                                >
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12 form-group">
                                 <label>Password</label>
-                                <input type="password" placeholder="Password" class="form-control">
+                                <input type="password" placeholder="Password" class="form-control" ng-model="register.password" required>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-sm-12 form-group">
                                 <label>Confirm Password</label>
-                                <input type="password" placeholder="Repeat Password" class="form-control">
+                                <input type="password" placeholder="Repeat Password" class="form-control" required>
                             </div>
                         </div>
 
@@ -77,17 +92,21 @@
                         <div class="row">
                             <div class="col-sm-6 form-group">
                                 <label>First Name</label>
-                                <input type="text" placeholder="Enter First Name Here.." class="form-control">
+                                <input type="text" placeholder="Enter First Name Here..." class="form-control" ng-model="register.firstName" required>
                             </div>
                             <div class="col-sm-6 form-group">
                                 <label>Last Name</label>
-                                <input type="text" placeholder="Enter Last Name Here.." class="form-control">
+                                <input type="text" placeholder="Enter Last Name Here..." class="form-control" ng-model="register.lastName" required>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12 form-group">
+                            <div class="col-sm-6 form-group">
+                                <label>UID</label>
+                                <input type="text" placeholder="Enter Last Name Here.." class="form-control" ng-model="register.uid" required>
+                            </div>
+                            <div class="col-sm-6 form-group">
                                 <label>Year</label>
-                                <select class="form-control" placeholder="...">
+                                <select class="form-control" placeholder="..." ng-model="register.year" required>
                                     <option value="0"> ...</option>
                                     <option value="1">Year 1</option>
                                     <option value="2">Year 2</option>
@@ -98,49 +117,16 @@
                             </div>
                         </div>
 
-
-
-                        <div class="form-group">
-                            <label>Address</label>
-                            <textarea placeholder="Enter Address Here.." rows="3" class="form-control"></textarea>
-                        </div>  
-                        <div class="row">
-                            <div class="col-sm-4 form-group">
-                                <label>City</label>
-                                <input type="text" placeholder="Enter City Name Here.." class="form-control">
-                            </div>  
-                            <div class="col-sm-4 form-group">
-                                <label>State</label>
-                                <input type="text" placeholder="Enter State Name Here.." class="form-control">
-                            </div>  
-                            <div class="col-sm-4 form-group">
-                                <label>Zip</label>
-                                <input type="text" placeholder="Enter Zip Code Here.." class="form-control">
-                            </div>      
-                        </div>
-                        <div class="row">
-                            <div class="col-sm-6 form-group">
-                                <label>Title</label>
-                                <input type="text" placeholder="Enter Designation Here.." class="form-control">
-                            </div>      
-                            <div class="col-sm-6 form-group">
-                                <label>Company</label>
-                                <input type="text" placeholder="Enter Company Name Here.." class="form-control">
-                            </div>  
-                        </div>                      
+                        <!-- Contact Info -->                        
                         <div class="form-group">
                             <label>Phone Number</label>
-                            <input type="text" placeholder="Enter Phone Number Here.." class="form-control">
+                            <input type="text" placeholder="Enter Phone Number Here.." class="form-control" phone-input ng-model="register.phoneNumber">
                         </div>      
                         <div class="form-group">
                             <label>Email Address</label>
-                            <input type="text" placeholder="Enter Email Address Here.." class="form-control">
-                        </div>  
-                        <div class="form-group">
-                            <label>Website</label>
-                            <input type="text" placeholder="Enter Website Name Here.." class="form-control">
+                            <input type="email" placeholder="Enter Email Address Here.." class="form-control" ng-model="register.email">
                         </div>
-                        <button type="button" class="btn btn-lg btn-info">Submit</button>                   
+                        <button type="button" class="btn btn-lg btn-info" ng-click="register.register()">Submit</button>                   
                         </div>
                     </form>
                 <!-- </div> -->
